# os_labs

./: Makefile  README.md  config.conf
lab1/: README.md  build.sh  config.conf  daemon.cpp  daemon.hpp
lab2/: CMakeLists.txt  README.md  build.sh  client.cpp  client.hpp  host.cpp  host.hpp  participants.conf
lab2/connections/: conn.hpp  conn_pipe.cpp
lab3/: CMakeLists.txt  README.md  build.sh  main.cpp  mcsp.cpp  mcsp.hpp  set.cpp  set.hpp
lab3/tests/: test_mcsp.hpp  test_set.hpp
